--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,7 @@
-Dockerfile
-docker-compose.yml
-.dockerignore
 .git
-.github
-.gitignore
+node_modules
+npm-debug.log*
+Dockerfile
+.dockerignore
+*.env
+coverage
