--- a/.github/workflows/publish-dockerhub.yml
+++ b/.github/workflows/publish-dockerhub.yml
@@ -12,6 +12,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: docker/setup-buildx-action@v3
+
+      # Preflight: fail fast if secrets are missing
+      - name: Check required secrets
+        run: |
+          [ -n "${{ secrets.DOCKERHUB_USERNAME }}" ] || { echo "::error ::Missing DOCKERHUB_USERNAME secret"; exit 1; }
+          [ -n "${{ secrets.DOCKERHUB_TOKEN }}" ]    || { echo "::error ::Missing DOCKERHUB_TOKEN secret"; exit 1; }
+
       - id: meta
         uses: docker/metadata-action@v5
         with:
@@ -20,10 +27,12 @@ jobs:
             type=ref,event=branch
             type=sha
             type=raw,value=play-latest,enable=${{ github.ref == 'refs/heads/play' }}
+
       - uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - uses: docker/build-push-action@v6
         with:
           context: .
