--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -2,19 +2,18 @@ name: Publish Docker image to GHCR (play)
 
 on:
   push:
-    branches: [ "play" ]     # build when you push to play
-  workflow_dispatch:          # allow manual runs from Actions tab
+    branches: [ "play" ]        # builds on every push to play
+  workflow_dispatch:             # allows manual runs from Actions
 
 permissions:
   contents: read
-  packages: write
+  packages: write                # needed to push to GHCR
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
       - uses: docker/setup-buildx-action@v3
 
       - id: meta
@@ -22,8 +21,8 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository_owner }}/nodegoat
           tags: |
-            type=ref,event=branch     # => tag "play"
-            type=sha                  # => short SHA tag
+            type=ref,event=branch           # -> :play
+            type=sha                        # -> :sha-abcdef
             type=raw,value=play-latest,enable=${{ github.ref == 'refs/heads/play' }}
 
       - uses: docker/login-action@v3
