--- a/.github/workflows/publish-ghcr.yml
+++ b/.github/workflows/publish-ghcr.yml
@@ -2,12 +2,12 @@ name: Publish Docker image to GHCR (play)
 
 on:
   push:
-    branches: [ "play" ]        # builds on every push to play
-  workflow_dispatch:             # allows manual runs from Actions
+    branches: [ "play" ]
+  workflow_dispatch: {}
 
 permissions:
   contents: read
-  packages: write                # needed to push to GHCR
+  packages: write
 
 jobs:
   docker:
@@ -19,10 +19,11 @@ jobs:
       - id: meta
         uses: docker/metadata-action@v5
         with:
+          # fixed, lowercase image name (safe even if the repo got renamed)
           images: ghcr.io/${{ github.repository_owner }}/nodegoat
           tags: |
-            type=ref,event=branch           # -> :play
-            type=sha                        # -> :sha-abcdef
+            type=ref,event=branch
+            type=sha
             type=raw,value=play-latest,enable=${{ github.ref == 'refs/heads/play' }}
 
       - uses: docker/login-action@v3
